// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create a ANSWER_QUESTION action 1`] = `
Object {
  "answer": "8",
  "questId": 0,
  "questionId": 0,
  "type": "ANSWER_QUESTION",
}
`;

exports[`create a GOTO_NEXT_QUESTION action 1`] = `
Object {
  "questId": 0,
  "type": "GOTO_NEXT_QUESTION",
}
`;

exports[`create a SHOW_CORRECT_ANSWER action 1`] = `
Object {
  "questId": 0,
  "type": "SHOW_CORRECT_ANSWER",
}
`;

exports[`create a START_QUEST action 1`] = `
Object {
  "questId": 0,
  "type": "START_QUEST",
}
`;
